--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    align-items: center;
     height: 100vh;
     margin: 0;
     background-image:url(img/cfb477a6cfda30ae873aa0c01c22d9ac.jpeg);
