--- a/style.css
+++ b/style.css
@@ -7,11 +7,11 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-image:url(img/cfb477a6cfda30ae873aa0c01c22d9ac.jpeg);
+    background-color: royalblue;
 }
 h1{
-    border: 2px solid white;
-    padding: 20px 35px;
+    border: 2px solid #fff;
+    padding: 20px 40px;
     border-radius: 10px;
 
 }
@@ -23,6 +23,7 @@ h1{
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 300px;
     text-align: center;
+   
     
 }
 
@@ -52,6 +53,7 @@ button {
     cursor: pointer;
     text-transform: uppercase;
     font-weight: bold;
+    font-family:Arial, Helvetica, sans-serif;
 }
 button:hover {
     background-color: #218838;
